fixed @media not covering everything

--- a/src/style.css
+++ b/src/style.css
@@ -216,10 +216,6 @@ a {
   padding-left: 5px;
 }
 
-.contact h2 {
-  padding: 5px;
-}
-
 .contactbox {
   font-size: 10px;
   display: flex;
@@ -231,6 +227,7 @@ a {
   list-style-type: none;
   padding: 0;
   font-family: 'RobotoMono', Courier, monospace;
+  font-size: 15px;
 }
 
 .contact img {
@@ -305,7 +302,7 @@ a {
     width: 190px;
     border: 5px solid #2a2e2d;
     }
-  }
+
 
   .myworkbox {
     grid-template-columns: 98%;
@@ -325,6 +322,7 @@ a {
   .contactrow img {
     justify-content: space-around;
   }
+}
 
 @media screen and (min-width: 1365px) {
   .aboutme img {
